# Disunited-States-of-America

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
assets/: quotes.json
assets/map_data/: convert.py  county.json  countysimple.json  simple1.json  verysimple.json
assets/map_data/counties/: Abbeville.mosaicCounty  Abbeville1439.mosaicCounty  Acadia.mosaicCounty  Acadia131.mosaicCounty  Accomack.mosaicCounty  Accomack3209.mosaicCounty  Ada.mosaicCounty  Ada2139.mosaicCounty  Adair.mosaicCounty  Adair148.mosaicCounty  Adair1503.mosaicCounty  Adair1718.mosaicCounty  Adair1730.mosaicCounty  Adams.mosaicCounty  Adams1157.mosaicCounty  Adams1214.mosaicCounty  Adams2112.mosaicCounty  Adams2118.mosaicCounty  Adams2128.mosaicCounty  Adams2215.mosaicCounty  Adams2243.mosaicCounty  Adams2877.mosaicCounty  Adams2916.mosaicCounty  Adams3112.mosaicCounty  Adams538.mosaicCounty  Adams880.mosaicCounty  Addison.mosaicCounty  Addison2810.mosaicCounty  Adjuntas.mosaicCounty  Adjuntas2116.mosaicCounty  Aguada.mosaicCounty  Aguada2576.mosaicCounty  Aguadilla.mosaicCounty  Aguadilla1583.mosaicCounty  Aguas Buenas.mosaicCounty  Aguas Buenas1527.mosaicCounty  Aibonito.mosaicCounty  Aibonito2666.mosaicCounty  Aiken.mosaicCounty  Aiken999.mosaicCounty  (+5104 more)
assets/raw_map_data/: readme.md
assets/scripts/: testScript.lua
assets/scripts/engine/: camera.lua
assets/scripts/engine/ui/: button.lua
assets/scripts/gameObjs/: background.lua  county.lua  loadingText.lua  map.lua  quoteText.lua
src/: game.cpp  game.h  gameobject.cpp  gameobject.h  main.cpp  scene.cpp  scene.h  transform.cpp  transform.h
src/gameObjects/: boat.cpp  boat.h  county.cpp  county.h  map.cpp  map.h
src/gameObjects/ui/: button.h  text.cpp  text.h
src/graphics/: readme.md  renderer.cpp  renderer.h  sprite.cpp  sprite.h
src/scripting/: scriptmanager.cpp  scriptmanager.h
src/utils/: jsonReader.cpp  jsonReader.h  stateColor.cpp  stateColor.h
tmp/: mingw-w64-i686-libwinpthread-git-9.0.0.6373.5be8fcd83-1-any.pkg.tar.zst
